--- a/index.html
+++ b/index.html
@@ -31,6 +31,44 @@
                 <img src="https://github.com/osdeving.png" alt="Profile image">
             </div>
         </div>
+
+        <div class="settings-menu">
+            <div class="settings-menu-inner">
+                <div class="user-profile">
+                    <img src="https://github.com/osdeving.png" alt="profile">
+                    <div>
+                        <p>Willams Sousa</p>
+                        <a href="#">See your profile</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="user-profile">
+                    <img src="images/feedback.png" alt="profile">
+                    <div>
+                        <p>Give Feedback</p>
+                        <a href="#">Help us to improve the new design</a>
+                    </div>
+                </div>
+                <hr>
+
+                <div class="settings-links">
+                    <img src="images/setting.png" alt="settings" class="settings-icon">
+                    <a href="#">Settings & Privacy <img src="images/arrow.png" alt="arrow" width="10px"></a>
+                </div>
+                <div class="settings-links">
+                    <img src="images/help.png" alt="help" class="settings-icon">
+                    <a href="#">Help & Support <img src="images/arrow.png" alt="arrow" width="10px"></a>
+                </div>
+                <div class="settings-links">
+                    <img src="images/display.png" alt="display" class="settings-icon">
+                    <a href="#">Display & Accessibility <img src="images/arrow.png" alt="arrow" width="10px"></a>
+                </div>
+                <div class="settings-links">
+                    <img src="images/logout.png" alt="logout" class="settings-icon">
+                    <a href="#">Logout <img src="images/arrow.png" alt="arrow" width="10px"></a>
+                </div>
+            </div>
+        </div>
     </nav>
 
     <div class="container">
