--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
             </div>
 
             <div class="nav-user-icon online">
-                <img src="https://github.com/osdeving.png" alt="Profile image">
+                <img src="https://github.com/osdeving.png" alt="Profile">
             </div>
         </div>
 
         <div class="settings-menu">
+            <div id="dark-btn">
+                <span></span>
+            </div>
             <div class="settings-menu-inner">
                 <div class="user-profile">
                     <img src="https://github.com/osdeving.png" alt="profile">
@@ -95,24 +98,24 @@
         <!-- main content -->
         <div class="main-content">
             <div class="story-gallery">
-                <div class="story story1'">
+                <div class="story story1">
                     <img src="images/upload.png" alt="upload">
                     <p>Post Story</p>
                 </div>
                 <div class="story story2">
-                    <img src="images/member-1.png" alt="upload">
+                    <img src="images/member-1.png" alt="member1">
                     <p>Alison</p>
                 </div>
                 <div class="story story3">
-                    <img src="images/member-2.png" alt="upload">
+                    <img src="images/member-2.png" alt="member2">
                     <p>Jackson</p>
                 </div>
                 <div class="story story4">
-                    <img src="images/member-3.png" alt="upload">
+                    <img src="images/member-3.png" alt="member3">
                     <p>Samona</p>
                 </div>
                 <div class="story story5">
-                    <img src="images/member-4.png" alt="upload">
+                    <img src="images/member-4.png" alt="member4">
                     <p>Jonh Doe</p>
                 </div>
             </div>
@@ -352,5 +355,6 @@
         <p>Copyright 2024 - Facebook-like CSS/HTML site example</p>
     </div>
 
+    <script src="script.js"></script>
 </body>
 </html>
